--- a/Report.qmd
+++ b/Report.qmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 title: "Data Analysis Report - Analyzing the Impact of GDP, Time, and equatorial location on Life Expectancy"
 author: "Elizabeth Yirava, Joanna Giju, Nicholas Rohrs, Huiyan Ni"
 date: "04/17/2024"
@@ -110,7 +115,7 @@ $$
 \end{aligned}
 $$ 
 
-where $\mbox{I}()$ in Equation 1 indicates an indicator variable, taking value 1 when the condition is true and zero otherwise, and the refrence level for the factor variable is the United States.
+where $\mbox{I}()$ in Equation 1 indicates an indicator variable, taking value 1 when the condition is true and zero otherwise, and the reference level for the factor variable is the United States.
 
 ```{r}
 ######## When knitting--- remove this code chunk from report
@@ -142,242 +147,3 @@ ggplot(top_gdp_countries_5, aes(x = Year, y = proportion_past_62, color = Entity
   scale_color_manual(values = my_colors)
 
 ```
-
-The first plot shows the relationship between year and the proportion of the population surviving to age 62 for all countries. We choose to start at year 1900 and aggregate by 5 year intervals due to the availability of the data and the lack of any survivors to age 62 prior to 1900. The graph demonstrates that there appears to be an increase in proportion of population surviving to age 62 as the years progress. 
-
-The second plot again shows the relationship between year and the proportion of the population surviving to age 62, but is now disaggregated by country. In this graph the increase in proportion of population surviving to age 62 as years progress is also apparent. However, the graph also shows that the countries appear to differ in the amount of years it takes before the proportion surviving to age 62 increases. 
-
-For this portion of the analysis, we will aggregate by decade across the replicates. There is a large number of observations for each decade which reduces uncertainty of the estimated probability.
-
-```{r}
-######## When knitting--- remove this code chunk from report
-count(le_filtered, Entity, Year = as.integer(Year %/% 5) * 5) %>%
-  filter(Year >= 1900)
-
-count(le_filtered, Year = as.integer(Year %/% 5) * 5) %>%
-  filter(Year >= 1900)
-```
-
-This table shows the amount of observations in each bin for the two models. The first shows the data by country and year, and the second shows by year only.
-
-## INSIGHT 2- United States over time Binomial THIS IS WRONG MODEL SET UP ->(N,P)
-
-We define as outcome in the United states where the average life expectancy is above 62 at $year_i$ and denote the observed values as $y_i$ with $i = 1, \ldots, n$ with $n = 100$. Let $y_i = 1$ indicate average life expectancy $> 62$ and $0$ otherwise.  
-
-We assume that each $y_i$ is a realization of a random variables $Y_i \sim \mbox{Bernoulli}(p_i)$ independently, and model an average life expectancy above 62 for each year using the following logistic regression:
-
-## INSIGHT 3 - Countries close and far from equator
-
-
-# Results
-
-## Insight 1
-
-```{r}
-### model that uses only 5 yr as a covariate
-top_gdp_countries_5 <- le_filtered %>%
-  mutate(Year = as.integer(Year %/% 5) * 5) %>%
-  subset(Year >= 1900) %>%
-  group_by(Year) %>%
-  summarize(proportion_past_62 = mean(Past62), num = n())
-
-binomial_model_yr_5 <- glm(proportion_past_62 ~ Year, data = top_gdp_countries_5, family = binomial, weights = num)
-summary(binomial_model_yr_5)
-
-anova_gdp <- anova(binomial_model_yr_5, test = "Chisq")
-anova_gdp
-```
-
-```{r}
-# Interpretation of beta1 (year) and CI for year this model
-exp(coef(binomial_model_yr_5)[2])
-beta_8_hat <- coef(binomial_model_yr_5)[2]
-beta_8_hat_se <- sqrt(diag(vcov(binomial_model_yr_5))[2])
-beta_8_ci <- beta_8_hat + c(-1,1) * beta_8_hat_se *qnorm(0.05/2, lower.tail = FALSE)
-exp(beta_8_ci)
-```
-
-Model Fit:
-For this model, the incredibly small p-value for intercept $\beta_0$ and the slope for the impact of year on the logit of the probability of surviving to age 62, $\beta_1$, are significantly different from 0. The also very small p-value in the analysis of deviance table (<2.2e-16) shows strong evidence in favor of rejecting the intercept-only model and preferring the model including year. 
-
-Model Interpretation:
-The model says that for a one unit increase in year, the log odds of surviving to 62 multiplies by $e ^ \hat{\beta_1} = 1.075$ with a 95% confidence interval of between [1.06, 1.09]. This supports the idea presented in the graphs above: as years progress, the log odds of surviving to 62 increase. 
-
-Now we will try a model including the factor variable with different levels for each of the 7 countries included with a baseline of the United States and also include year as a covariate still. 
-```{r}
-## Model with both year and country 
-top_gdp_countries_5_entity <- le_filtered %>%
-  mutate(Year = as.integer(Year %/% 5) * 5, Entity = as.factor(Entity)) %>%
-  subset(Year >= 1900) %>%  
-  group_by(Entity, Year) %>% 
-  summarize(proportion_past_62 = mean(Past62), num = n())
-
-
-binomial_model_country_5 <- glm(formula = proportion_past_62 ~ relevel(Entity, ref = "United States") + Year, data = top_gdp_countries_5_entity, family = binomial, weights = num)
-summary(binomial_model_country_5)
-
-anova_country <- anova(binomial_model_country_5, test = "Chisq")
-anova_country
-```
-
-```{r}
-exp(coef(binomial_model_country_5)[])
-```
-
-
-Model Fit:
-All parameters in the model have p-values that are significantly different from 0 (since some of the country factor level variables are significant, we include all of them). The incredibly small p-values in the analysis of deviance table (a change in deviance of 94.12 on 6 degrees of freedom for the countries and 731.85 on one degree of freedom for year) indicates that there is strong evidence to reject the intercept-only model and prefer our logistic regression model with entity and year as covariates. 
-
-Model Interpretation:
-This model shows that in a model also containing year, the log odds of surviving to 62 for each respective country multiplies by:
-China- $e ^ \hat{\beta_1} = 1.76e-14$
-France- $e ^ \hat{\beta_2} = 1.33e-3$
-Germany- $e ^ \hat{\beta_3} = 1.46e-4$
-India- $e ^ \hat{\beta_4} = 3.76e-22$
-Japan- $e ^ \hat{\beta_5} = 1.10e-5$
-United Kingdom- $e ^ \hat{\beta_6} = 1.88e-1$
-
-It is notable that India and China both have far more negative log odds compared to the other countries in this model. 
-
-Insight 2:
-
-Had to change the target number to 40 because the life expectancy does not hit 62 until after the industrial revolution.
-
-```{r}
-# Filter the data for the years 1760-1840, but 62 is not reached in this time period.
-indust <- le %>%
-  filter(Year >= 1760 & Year <= 1840)
-
-proportion_data <- indust %>%
-  group_by(Year) %>%
-  summarize(proportion_past_62 = mean(Past62))
-
-model <- lm(proportion_past_62 ~ Year, data = proportion_data)
-
-predictions <- data.frame(Year = seq(min(proportion_data$Year), max(proportion_data$Year), by = 1))
-predictions$Predicted <- predict(model, newdata = predictions)
-
-ggplot(proportion_data, aes(x = Year, y = proportion_past_62)) +
-  geom_point() +
-  labs(title = "Proportion of countries hitting 62 years vs year", x = "Year", y= "Proportion") +
-  theme_bw()
-```
-
-```{r}
-# Filter the data for the years 1760-1840, but changed target number to 40 which is reached in this period.
-
-le$Past40 <- ifelse(le$LifeExpectancy > 40, 1, 0)
-
-indust40 <- le %>%
-  filter(Year >= 1760 & Year <= 1840)
-
-proportion_data <- indust40 %>%
-  group_by(Year) %>%
-  summarize(proportion_past_40 = mean(Past40))
-
-model <- lm(proportion_past_40 ~ Year, data = proportion_data)
-
-predictions <- data.frame(Year = seq(min(proportion_data$Year), max(proportion_data$Year), by = 1))
-predictions$Predicted <- predict(model, newdata = predictions)
-
-ggplot(proportion_data, aes(x = Year, y = proportion_past_40)) +
-  geom_point() +
-  labs(title = "Proportion of countries hitting 40 years vs year", x = "Year", y= "Proportion") +
-  theme_bw()
-```
-
-Since the shift from reaching the target age of 62 happens around 1945, I changed the time period to focus on.
-
-```{r}
-# Filtered the data for the years four decades before and after World War 2, which is around when 62 is reached.
-ww2 <- le %>%
-  filter(Year >= 1900 & Year <= 1980)
-
-proportion_data <- ww2 %>%
-  group_by(Year) %>%
-  summarize(proportion_past_62 = mean(Past62))
-
-model <- lm(proportion_past_62 ~ Year, data = proportion_data)
-
-predictions <- data.frame(Year = seq(min(proportion_data$Year), max(proportion_data$Year), by = 1))
-predictions$Predicted <- predict(model, newdata = predictions)
-
-ggplot(proportion_data, aes(x = Year, y = proportion_past_62)) +
-  geom_point() +
-  labs(title = "Proportion of countries hitting 62 years vs year", x = "Year", y= "Proportion") +
-  theme_bw()
-#I think theres something weird with what data is avaiable from 1920-1950
-```
-
-Insight 3:
-
-```{r}
-#select the countries which have the data before 1950
-le_year1949 <- le %>% filter(Year < 1949)
-
-countries_1949 <- unique(le_year1949$Entity)
-
-print(countries_1949)
-
-```
-```{r}
-# select three countries on equator(Indonesia, Uganda, Kenya), 
-# three countries on mid-latitude(Turkey,Mexico, Kazakhstan), 
-# and three countries on high-latitude(Sweden, Iceland, Finland) from previous list
-countries_equ <- c("Indonesia", "Uganda", "Kenya", "Turkey", "Mexico", "Kazakhstan", "Sweden", "Iceland", "Finland")
-
-# Filter the dataset to include only the specified countries
-le_equ <- le %>% filter(Entity %in% countries_equ) %>% filter(Year > 1924)%>% 
-  summarize(proportion_past_62 = mean(Past62), num = n())
-
-#le_equ <- le %>%
-#  mutate(Year = as.integer(Year %/% 5) * 5) %>% filter(Entity %in% countries_equ) %>% 
-#  subset(Year >= 1900) %>%  
-#  group_by(Entity, Year) %>% 
-#  summarize(proportion_past_62 = mean(Past62), num = n()) 
-
-le_equ
-
-```
-
-```{r}
-#glm for these countries
-
-
-binomial_model_equ <- glm(Past62 ~ relevel(Entity, ref = "United States") + Year, data = le_equ, family = binomial, weights = num)
-summary(binomial_model_equ)
-
-#From the result, we can see all factors p-value is less than 0.05, meaning countries is significant for life expectancy. All 
-# three equator countries: Kenya, Uganda, and Indonesia showing the large negative relationship with life expectancy. 
-# Mid-latitude countries Kazakhstan,Mexico and Turkey showing a relatively less negative relationship with life expectancy.
-# High-latitude countries Iceland, and Sweden showing positive relationship with life expectancy.
-# Overall, latitude more high, life expectancy more large. 
-# The result may also related with gpt of different countries, high-latitude have more developed countries than that near equator.  
-
-```
-
-```{r}
-# visual displaying
-colors <- c("Indonesia" = "red", "Uganda" = "red", "Kenya" = "red", "Turkey" = "blue", "Mexico" = "blue", "Kazakhstan" = "blue", "Sweden" = "green", "Iceland" = "green", "Finland" = "green")
-orders <- names(colors)
-
-ggplot(le_equ, aes(x = Year, y = LifeExpectancy, color = Entity)) +
-  geom_line() +
-  scale_color_manual(values = colors, breaks = orders, labels = orders) + 
-  labs(x = "Year", y = "Life Expectancy", title = "Life Expectancy Over the Years in Different Countries") +
-  theme_minimal()
-
-```
-
-##Conclusion 
-
-###Insight 1
-The logistic regressions performed demonstrate a clear relationship between year and proportion of the population surviving to age 62. The proportion of the population surviving to age 62 also appears to be impacted by the country from which the population is sampled. Compared to the United States, other leading economic players have historically had less of the proportion of the population survive to age 62. This model could be improved by incorporating more covariates, such as presence of wars/famine/ other variables that would drastically impact life expectancy. Applications of the life expectancy study outlined in this report include studying health care and medicinal improvements over time or in different areas of the world. Alternatively, the models could be used to find where gaps in life expectancy exist (such as countries that comparatively have a much lower life expectancy) and attempt to remedy the discrepancy. 
-###Insight 2
-
-###Insight 3
-
-Discussion: In the future we may also want to focus on other interactive factors such as gender, involvement in war, and different life expectancies to reflect what was considered "healthy" during a time period. From the insights that we derived, we see a clear correlation between significant factors such as economical strength, #socio-cultural events such as revoultions#, and the equitorial location of a country on its life expectancies. Although it is important to note, we cannot determine directly that only these factors determined the likelihood of a country's life expectancy because multiple factors play a role. Access to health care, infection rates, socio-economic factors such as war, and overall lifestyle advancements.
-
-
-
